fixed video bottom white space

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ body {
     width: 100%;
     height: 100vh;
     object-fit: cover;
+    display: block;
 }
 .overlay-text {
     position: absolute;
@@ -108,6 +109,7 @@ body {
     left: 0;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
